[package]
name = "deserter"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
description = "Procedural macros to initialize Rust structs from JavaScript-like object syntax."
authors = ["Violet Iapalucci"]

[lib]
proc-macro = true

[dependencies]
once_cell = "1.19.0"
proc-macro2 = "1.0.84"
quote = "1.0.36"
send_wrapper = "0.6.0"
syn = { version = "2.0.66", features = ["full"] }
